deploy/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sms-api
spec:
  selector:
    app.kubernetes.io/name: sms-api
  ports:
    - name: http
      port: 8000
      targetPort: http
